formats logging; adds init_and_watch to relay and daemon.

--- a/gitp2p-log.conf
+++ b/gitp2p-log.conf
@@ -1,20 +1,23 @@
 # Logging for gitp2pd
-log4perl.logger.gitp2pd = INFO,  FileDeamon
+log4perl.logger.gitp2pd = DEBUG,  FileDaemon
  
-log4perl.appender.FileDeamon      = Log::Log4perl::Appender::File
-log4perl.appender.FileDeamon.filename = gitp2pd-test.log
-log4perl.appender.FileDeamon.layout   = Log::Log4perl::Layout::SimpleLayout
+log4perl.appender.FileDaemon      = Log::Log4perl::Appender::File
+log4perl.appender.FileDaemon.filename = gitp2pd-test.log
+log4perl.appender.FileDaemon.layout   = Log::Log4perl::Layout::PatternLayout
+log4perl.appender.FileDaemon.layout.ConversionPattern = [%d] %p - %m{chomp}%n
 
 # Logging for gitp2p-relay
-log4perl.logger.gitp2p.relay = INFO, FileRelay
+log4perl.logger.gitp2p.relay = DEBUG, FileRelay
 
 log4perl.appender.FileRelay      = Log::Log4perl::Appender::File
 log4perl.appender.FileRelay.filename = gitp2p-relay.log
-log4perl.appender.FileRelay.layout   = Log::Log4perl::Layout::SimpleLayout
+log4perl.appender.FileRelay.layout   = Log::Log4perl::Layout::PatternLayout
+log4perl.appender.FileRelay.layout.ConversionPattern = [%d] %p - %m{chomp}%n
 
 # Logging for git-remote-gitp2p
-log4perl.logger.gitp2p.helper = INFO, FileHelper
+log4perl.logger.gitp2p.helper = DEBUG, FileHelper
 
 log4perl.appender.FileHelper      = Log::Log4perl::Appender::File
 log4perl.appender.FileHelper.filename = gitp2p-helper.log
-log4perl.appender.FileHelper.layout   = Log::Log4perl::Layout::SimpleLayout
+log4perl.appender.FileHelper.layout   = Log::Log4perl::Layout::PatternLayout
+log4perl.appender.FileHelper.layout.ConversionPattern = [%d] %p - %m{chomp}%n
