Puts logs in a separate dir.

--- a/gitp2p-log.conf
+++ b/gitp2p-log.conf
@@ -2,7 +2,7 @@
 log4perl.logger.gitp2pd = DEBUG,  FileDaemon
  
 log4perl.appender.FileDaemon      = Log::Log4perl::Appender::File
-log4perl.appender.FileDaemon.filename = gitp2pd-test.log
+log4perl.appender.FileDaemon.filename = log/gitp2pd-test.log
 log4perl.appender.FileDaemon.layout   = Log::Log4perl::Layout::PatternLayout
 log4perl.appender.FileDaemon.layout.ConversionPattern = [%d] %p - %m{chomp}%n
 
@@ -10,7 +10,7 @@ log4perl.appender.FileDaemon.layout.ConversionPattern = [%d] %p - %m{chomp}%n
 log4perl.logger.gitp2p.relay = DEBUG, FileRelay
 
 log4perl.appender.FileRelay      = Log::Log4perl::Appender::File
-log4perl.appender.FileRelay.filename = gitp2p-relay.log
+log4perl.appender.FileRelay.filename = log/gitp2p-relay.log
 log4perl.appender.FileRelay.layout   = Log::Log4perl::Layout::PatternLayout
 log4perl.appender.FileRelay.layout.ConversionPattern = [%d] %p - %m{chomp}%n
 
@@ -18,6 +18,6 @@ log4perl.appender.FileRelay.layout.ConversionPattern = [%d] %p - %m{chomp}%n
 log4perl.logger.gitp2p.helper = DEBUG, FileHelper
 
 log4perl.appender.FileHelper      = Log::Log4perl::Appender::File
-log4perl.appender.FileHelper.filename = gitp2p-helper.log
+log4perl.appender.FileHelper.filename = log/gitp2p-helper.log
 log4perl.appender.FileHelper.layout   = Log::Log4perl::Layout::PatternLayout
 log4perl.appender.FileHelper.layout.ConversionPattern = [%d] %p - %m{chomp}%n
